--- a/Tracker/Tracker.csproj
+++ b/Tracker/Tracker.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="State.cs" />
+    <Compile Include="StateChange.cs" />
     <Compile Include="Timeline.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
